# shelf

./: .env.example  .gitignore  BOOK_MERGE.md  BOOK_OCR.md  CHECKPOINT_TWO_STAGE_AUDIT.md  CLAUDE.md  CNAME  CONTEST_SUBMISSION.md  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  LABEL_PAGES_STATUS_AUDIT.md  LICENSE  LLM_CLEANUP_PLAN.md  Makefile  NEXT_SESSION.md  NEXT_SESSION_PROMPT.md  README.md  SCAN_WORKFLOW.md  SESSION_4_SUMMARY.md  SONNET.md  STRUCTURE_MIGRATION_PLAN.md  agent-architecture.md  ar.py  book_llm_merge.py  book_llm_process.py  book_ocr.py  book_review_handler.py  checkpoint.py  conftest.py  go.mod  go.sum  implementation-roadmap.md  index.html  keyplayers.md  llm_client.py  logger.py  mcp_server.py  pricing.py  project-structure.md  pyproject.toml  (+5 more)
.claude/: next_session_prompt.md  settings.json
.prompts/: analyze-label-structure-report.md
cli/: __init__.py  batch.py  batch_parallel.py  constants.py  helpers.py  library.py  namespace_batch.py  namespace_book.py  namespace_library.py  namespace_serve.py  pipeline.py  serve.py  sweep.py
config/: __init__.py  parallelization.py
docs/: CHECKPOINT_SYSTEM.md  CLEANUP_AUDIT.md  FIRST_BOOK_PROCESSING_PLAN.md  LIBRARY_CONSISTENCY.md  MCP_SETUP.md  OCR_CLEAN.md  OUTPUT_SCHEMA.md  PIPELINE_ARCHITECTURE.md  PIPELINE_REFACTOR_PLAN.md  PROMPT_AUDIT_REPORT.md  STAGE_IMPLEMENTATION_GUIDE.md  STAGE_PATTERNS_REFERENCE.md  STRUCTURE.md  agent-client-design.md  audit-checklist.md  correction_prompt_evolution_analysis.md  development-history.md  doc.go  fallback_model_architecture_report.md  ocr-checkpoint-refactor-plan.md  ocr-rebuild-plan.md  rich_integration_plan.md  structure_schema.md  toc_extraction_policies.md
infra/: __init__.py  book_storage.py  checkpoint.py  config.py  llm_batch_client.py  llm_client.py  llm_models.py  parallel.py  pdf_utils.py  progress.py  rate_limiter.py  stage_report.py
pipeline/: __init__.py  correct.py  fix.py  ocr.py  quality_review.py  run.py  structure.py
platform/: __init__.py  checkpoint.py  config.py  (+4 more)
(+1441 files in other folders)
