[project]
name = "ar-research"
version = "0.1.0"
description = "Book scanning and OCR pipeline for historical research"
requires-python = ">=3.12"
dependencies = [
    "watchdog>=6.0.0",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
ar = "ar:main"