[project]
name = "scanshelf"
version = "0.1.0"
description = "Turn physical books into digital libraries - OCR, correction, and structure extraction pipeline"
requires-python = ">=3.12"
dependencies = [
    "watchdog>=6.0.0",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "mcp>=0.1.0",
    "PyPDF2>=3.0.0",
    "pytest>=7.4.0",
    "lxml>=5.0.0",
    "jiwer>=3.0.0",
    "rich>=13.0.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "beautifulsoup4>=4.12.0",
    "docker>=7.0.0",
    "chandra-ocr>=0.1.0",
    "mistralai>=1.9.0",
    "datalab-python-sdk>=0.1.0",
    "surya-ocr>=0.17.0",
    "openai>=1.0.0",
    "rapidfuzz>=3.0.0",
    "docling>=2.0.0",
    "mlx-vlm>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["infra*", "pipeline*"]
